--- a/cart-microservice-nodejs/Dockerfile
+++ b/cart-microservice-nodejs/Dockerfile
@@ -1,8 +1,20 @@
+# Use a Node.js base image
 FROM node:14
-COPY . /var/www
-WORKDIR /var/www
-#RUN npm install
 
+# Set the working directory
+WORKDIR /var/www
+
+# Copy the package.json and package-lock.json first
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application code
+COPY . .
+
+# Expose the application port
 EXPOSE 1004
 
-CMD [ "node", "index.js" ]
+# Start the application
+CMD ["node", "index.js"]
