--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,28 +14,28 @@ services:
       - ui
   
   shoe:
-    image: shobana56it/shoe
+    image: ammudivy/shoe
     ports:
       - 1002:1002
     depends_on:
       - zuul
 
   offers:
-    image: shobana56it/offer
+    image: ammudivy/offer
     ports:
       - 1001:1001
     depends_on:
       - zuul
 
   cart:
-    image: shobana56it/cart
+    image: ammudivy/cart
     ports:
       - 1004:1004
     depends_on:
       - zuul
 
   wishlist:
-    image: shobana56it/wishlist
+    image: ammudivy/wishlist
 #    volumes:
 #      - ./wishlist-microservice-python:.
     ports:
