--- a/kubernetes/yamlfile/api.yaml
+++ b/kubernetes/yamlfile/api.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name:  "zuul-api"
-        image:  shobana56it/api:v1
+        image:  ammudivy/api:v1
         ports:
         - containerPort: 9999
           name:  "zuul-api"
