--- a/kubernetes/yamlfile/cart.yaml
+++ b/kubernetes/yamlfile/cart.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: "cart"
-        image:  shobana56it/ui:v2
+        image:  ammudivy/ui:v2
         imagePullPolicy: Always
         ports:
         - containerPort:  1004
