--- a/kubernetes/yamlfile/offers.yaml
+++ b/kubernetes/yamlfile/offers.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: "offer"
-        image:  shobana56it/spring:v1
+        image:  ammudivy/spring:v1
         ports:
         - containerPort:  1001
           name: "offer"
