--- a/kubernetes/yamlfile/shoes.yaml
+++ b/kubernetes/yamlfile/shoes.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: "shoe"
-        image:  shobana56it/spring:v2
+        image:  ammudivy/spring:v2
         ports:
         - containerPort:  1002
           name: "shoe"
