--- a/kubernetes/yamlfile/ui.yaml
+++ b/kubernetes/yamlfile/ui.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: "react-ui"
-        image:  shobana56it/ui:v1
+        image:  ammudivy/ui:v1
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
